--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <div id="first">
 <!--    <form action="demo_form.asp">-->
-        <label>First name:</label> <input type="text" name="FirstName" value="Mickey"><br>
-        <label>Last name:</label> <input type="text" name="LastName" value="Mouse"><br>
+        <label for="30">First name:</label> <input type="text" name="FirstName" value="Mickey" id="30"><br>
+        <label for="31">Last name:</label> <input type="text" name="LastName" value="Mouse" id="31"><br>
         <button id="10" class="add_name">submit</button>
         <br>
 <!--    </form>-->
